--- a/csatevents.ui
+++ b/csatevents.ui
@@ -87,8 +87,15 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_5">
+       <property name="toolTip">
+        <string>Center &amp; Set map time</string>
+       </property>
        <property name="text">
-        <string>Show on map</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resource.qrc">
+         <normaloff>:/res/set_map_time.png</normaloff>:/res/set_map_time.png</iconset>
        </property>
       </widget>
      </item>
@@ -106,6 +113,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
