--- a/moonlessnightsdlg.ui
+++ b/moonlessnightsdlg.ui
@@ -94,15 +94,22 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_2">
+       <property name="toolTip">
+        <string>OK &amp; Set map time</string>
+       </property>
        <property name="text">
-        <string>OK &amp;&amp; Set time</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resource.qrc">
+         <normaloff>:/res/set_map_time.png</normaloff>:/res/set_map_time.png</iconset>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>Cancel</string>
+        <string>OK</string>
        </property>
       </widget>
      </item>
@@ -118,6 +125,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
