--- a/csetting.ui
+++ b/csetting.ui
@@ -171,57 +171,13 @@
             <enum>QFrame::StyledPanel</enum>
            </property>
            <property name="currentIndex">
-            <number>9</number>
+            <number>0</number>
            </property>
            <widget class="QWidget" name="stackedWidget_2Page1">
             <layout class="QVBoxLayout" name="verticalLayout_18">
              <item>
               <layout class="QGridLayout" name="gridLayout_2">
-               <item row="1" column="0">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox">
-                 <property name="suffix">
-                  <string>°</string>
-                 </property>
-                 <property name="decimals">
-                  <number>0</number>
-                 </property>
-                 <property name="minimum">
-                  <double>1.000000000000000</double>
-                 </property>
-                 <property name="maximum">
-                  <double>90.000000000000000</double>
-                 </property>
-                </widget>
-               </item>
-               <item row="6" column="0">
-                <widget class="QCheckBox" name="checkBox_2">
-                 <property name="text">
-                  <string>Proper name priority</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="3" column="3">
-                <widget class="CFontColorButton" name="pushButton_5">
-                 <property name="text">
-                  <string/>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0">
-                <widget class="QLabel" name="label">
-                 <property name="text">
-                  <string>Show proper name from FOV</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="7" column="0">
-                <widget class="QCheckBox" name="checkBox">
-                 <property name="text">
-                  <string>Bayer letter priority</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="19" column="0">
+               <item row="21" column="0">
                 <spacer name="verticalSpacer_4">
                  <property name="orientation">
                   <enum>Qt::Vertical</enum>
@@ -234,17 +190,36 @@
                  </property>
                 </spacer>
                </item>
-               <item row="0" column="3">
-                <widget class="QLabel" name="label_5">
+               <item row="8" column="0">
+                <widget class="QCheckBox" name="cb_properMotion">
                  <property name="text">
-                  <string>Proper name font &amp; color</string>
+                  <string>Show proper motion vector</string>
                  </property>
                 </widget>
                </item>
-               <item row="2" column="3">
-                <widget class="QLabel" name="label_6">
+               <item row="16" column="2">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_30">
+                 <property name="decimals">
+                  <number>1</number>
+                 </property>
+                 <property name="minimum">
+                  <double>-5.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>5.000000000000000</double>
+                 </property>
+                 <property name="singleStep">
+                  <double>0.500000000000000</double>
+                 </property>
+                </widget>
+               </item>
+               <item row="16" column="1">
+                <widget class="QToolButton" name="toolButton_2">
+                 <property name="toolTip">
+                  <string>Show star bitmap</string>
+                 </property>
                  <property name="text">
-                  <string>Bayer letter font &amp; color</string>
+                  <string>I</string>
                  </property>
                 </widget>
                </item>
@@ -255,10 +230,47 @@
                  </property>
                 </widget>
                </item>
-               <item row="8" column="0">
-                <widget class="QCheckBox" name="cb_properMotion">
+               <item row="7" column="0">
+                <widget class="QCheckBox" name="checkBox">
                  <property name="text">
-                  <string>Show proper motion vector</string>
+                  <string>Bayer letter priority</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="12" column="0" colspan="7">
+                <widget class="Line" name="line_4">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                </widget>
+               </item>
+               <item row="15" column="2">
+                <widget class="QLabel" name="label_61">
+                 <property name="text">
+                  <string>Star size factor</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="16" column="6">
+                <spacer name="horizontalSpacer_6">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item row="16" column="0">
+                <widget class="QComboBox" name="comboBox">
+                 <property name="iconSize">
+                  <size>
+                   <width>24</width>
+                   <height>24</height>
+                  </size>
                  </property>
                 </widget>
                </item>
@@ -278,22 +290,8 @@
                  </property>
                 </widget>
                </item>
-               <item row="2" column="0">
-                <widget class="QLabel" name="label_2">
-                 <property name="text">
-                  <string>Show bayer letter from FOV</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="5" column="3">
-                <widget class="CFontColorButton" name="pushButton_6">
-                 <property name="text">
-                  <string/>
-                 </property>
-                </widget>
-               </item>
-               <item row="3" column="0">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+               <item row="1" column="0">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox">
                  <property name="suffix">
                   <string>°</string>
                  </property>
@@ -308,24 +306,31 @@
                  </property>
                 </widget>
                </item>
-               <item row="4" column="0">
-                <widget class="QLabel" name="label_3">
+               <item row="19" column="0">
+                <widget class="QLabel" name="label_114">
                  <property name="text">
-                  <string>Show flamsteed number from FOV</string>
+                  <string>Halo intensity</string>
                  </property>
                 </widget>
                </item>
-               <item row="4" column="3">
-                <widget class="QLabel" name="label_7">
+               <item row="0" column="0">
+                <widget class="QLabel" name="label">
                  <property name="text">
-                  <string>Flamsteed number font &amp; color</string>
+                  <string>Show proper name from FOV</string>
                  </property>
                 </widget>
                </item>
-               <item row="1" column="3">
-                <widget class="CFontColorButton" name="pushButton_4">
+               <item row="15" column="0">
+                <widget class="QLabel" name="label_4">
                  <property name="text">
-                  <string/>
+                  <string>Star bitmap</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="label_2">
+                 <property name="text">
+                  <string>Show bayer letter from FOV</string>
                  </property>
                 </widget>
                </item>
@@ -348,69 +353,10 @@
                  </property>
                 </widget>
                </item>
-               <item row="17" column="2">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_30">
-                 <property name="decimals">
-                  <number>1</number>
-                 </property>
-                 <property name="minimum">
-                  <double>-5.000000000000000</double>
-                 </property>
-                 <property name="maximum">
-                  <double>5.000000000000000</double>
-                 </property>
-                 <property name="singleStep">
-                  <double>0.500000000000000</double>
-                 </property>
-                </widget>
-               </item>
-               <item row="16" column="2">
-                <widget class="QLabel" name="label_61">
+               <item row="6" column="0">
+                <widget class="QCheckBox" name="checkBox_2">
                  <property name="text">
-                  <string>Star size factor</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="17" column="1">
-                <widget class="QToolButton" name="toolButton_2">
-                 <property name="toolTip">
-                  <string>Show star bitmap</string>
-                 </property>
-                 <property name="text">
-                  <string>I</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="17" column="0">
-                <widget class="QComboBox" name="comboBox">
-                 <property name="iconSize">
-                  <size>
-                   <width>24</width>
-                   <height>24</height>
-                  </size>
-                 </property>
-                </widget>
-               </item>
-               <item row="16" column="0">
-                <widget class="QLabel" name="label_4">
-                 <property name="text">
-                  <string>Star bitmap</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="18" column="0" colspan="3">
-                <widget class="CStarExample" name="frame_2">
-                 <property name="minimumSize">
-                  <size>
-                   <width>300</width>
-                   <height>48</height>
-                  </size>
-                 </property>
-                 <property name="frameShape">
-                  <enum>QFrame::Panel</enum>
-                 </property>
-                 <property name="frameShadow">
-                  <enum>QFrame::Sunken</enum>
+                  <string>Proper name priority</string>
                  </property>
                 </widget>
                </item>
@@ -430,41 +376,120 @@
                  </property>
                 </spacer>
                </item>
-               <item row="17" column="5">
-                <spacer name="horizontalSpacer_6">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
+               <item row="20" column="0">
+                <widget class="QSpinBox" name="spinBox_6">
+                 <property name="suffix">
+                  <string>%</string>
                  </property>
-                 <property name="sizeHint" stdset="0">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>100</number>
+                 </property>
+                 <property name="singleStep">
+                  <number>10</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0">
+                <widget class="QLabel" name="label_3">
+                 <property name="text">
+                  <string>Show flamsteed number from FOV</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="18" column="0">
+                <widget class="QCheckBox" name="checkBox_20">
+                 <property name="toolTip">
+                  <string>Draw halo at bright stars </string>
+                 </property>
+                 <property name="text">
+                  <string>Show star halo</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="0">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+                 <property name="suffix">
+                  <string>°</string>
+                 </property>
+                 <property name="decimals">
+                  <number>0</number>
+                 </property>
+                 <property name="minimum">
+                  <double>1.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>90.000000000000000</double>
+                 </property>
+                </widget>
+               </item>
+               <item row="17" column="0" colspan="3">
+                <widget class="CStarExample" name="frame_2">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
                   <size>
-                   <width>40</width>
-                   <height>20</height>
+                   <width>320</width>
+                   <height>48</height>
                   </size>
                  </property>
-                </spacer>
+                 <property name="frameShape">
+                  <enum>QFrame::Box</enum>
+                 </property>
+                 <property name="frameShadow">
+                  <enum>QFrame::Raised</enum>
+                 </property>
+                </widget>
                </item>
-               <item row="16" column="3">
-                <widget class="QCheckBox" name="checkBox_3">
+               <item row="0" column="2">
+                <widget class="QLabel" name="label_5">
                  <property name="text">
-                  <string>Use spectral color</string>
+                  <string>Proper name font &amp; color</string>
                  </property>
                 </widget>
                </item>
-               <item row="12" column="0" colspan="6">
-                <widget class="Line" name="line_4">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                </widget>
-               </item>
-               <item row="16" column="4">
-                <widget class="QLabel" name="label_110">
+               <item row="1" column="2">
+                <widget class="CFontColorButton" name="pushButton_4">
                  <property name="text">
-                  <string>Saturation</string>
+                  <string/>
                  </property>
                 </widget>
                </item>
-               <item row="17" column="4">
+               <item row="2" column="2">
+                <widget class="QLabel" name="label_6">
+                 <property name="text">
+                  <string>Bayer letter font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="2">
+                <widget class="CFontColorButton" name="pushButton_5">
+                 <property name="text">
+                  <string/>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="2">
+                <widget class="QLabel" name="label_7">
+                 <property name="text">
+                  <string>Flamsteed number font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="5" column="2">
+                <widget class="CFontColorButton" name="pushButton_6">
+                 <property name="text">
+                  <string/>
+                 </property>
+                </widget>
+               </item>
+               <item row="20" column="2">
                 <widget class="QSpinBox" name="spinBox_5">
                  <property name="suffix">
                   <string>%</string>
@@ -480,6 +505,20 @@
                  </property>
                  <property name="value">
                   <number>100</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="19" column="2">
+                <widget class="QLabel" name="label_110">
+                 <property name="text">
+                  <string>Saturation</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="18" column="2">
+                <widget class="QCheckBox" name="checkBox_3">
+                 <property name="text">
+                  <string>Use spectral color</string>
                  </property>
                 </widget>
                </item>
